terraform/alb.tf
resource "aws_lb" "app" {
  name               = "ai-doc-rag-alb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb.id
  ]

  subnets = [
  "subnet-03c38e7b9272979ed",
  "subnet-0808b979a49b05019"
  ]

  tags = {
    Project = var.project_name
  }
}

resource "aws_lb_target_group" "app" {
  name        = "ai-doc-rag-tg"
  port        = 5000
  protocol    = "HTTP"
  target_type = "ip"

  vpc_id = data.aws_vpc.default.id

  health_check {
  path                = "/"
  protocol            = "HTTP"
  port                = "traffic-port"
  healthy_threshold   = 5
  unhealthy_threshold = 2
  interval            = 30
  timeout             = 5
  matcher             = "200"
}

  tags = {
    Project = var.project_name
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.app.arn

  port     = 80
  protocol = "HTTP"

  default_action {
    type = "forward"

    target_group_arn = aws_lb_target_group.app.arn    
  }
}
